--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - checkout
 
+      - run: mvn clean install
+
       # Download and cache dependencies
       - restore_cache:
           keys:
