--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,59 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>ktlint</id>
+                        <phase>verify</phase>
+                        <configuration>
+                            <target name="ktlint">
+                                <java classname="com.github.shyiko.ktlint.Main"
+                                    classpathref="maven.plugin.classpath"
+                                    dir="${basedir}"
+                                    failonerror="true"
+                                    fork="true"
+                                    taskname="ktlint">
+                                    <arg value="src/**/*.kt" />
+                                </java>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>ktlint-format</id>
+                        <configuration>
+                            <target name="ktlint">
+                                <java classname="com.github.shyiko.ktlint.Main"
+                                    classpathref="maven.plugin.classpath"
+                                    dir="${basedir}"
+                                    failonerror="true"
+                                    fork="true"
+                                    taskname="ktlint">
+                                    <arg value="-F" />
+                                    <arg value="src/**/*.kt" />
+                                </java>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.github.shyiko</groupId>
+                        <artifactId>ktlint</artifactId>
+                        <version>0.19.0</version>
+                    </dependency>
+                    <!-- additional 3rd party ruleset(s) can be specified here -->
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
