--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,63 @@
                     <!-- additional 3rd party ruleset(s) can be specified here -->
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <!--<rule>-->
+                                <!--<element>PACKAGE</element>-->
+                                <!--<limits>-->
+                                <!--<limit>-->
+                                <!--<counter>LINE</counter>-->
+                                <!--<value>COVEREDRATIO</value>-->
+                                <!--<minimum>0.50</minimum>-->
+                                <!--</limit>-->
+                                <!--</limits>-->
+                                <!--</rule>-->
+                                <!--<rule>-->
+                                <!--<element>BUNDLE</element>-->
+                                <!--<limits>-->
+                                <!--<limit>-->
+                                <!--<counter>COMPLEXITY</counter>-->
+                                <!--<value>COVEREDRATIO</value>-->
+                                <!--<minimum>0.60</minimum>-->
+                                <!--</limit>-->
+                                <!--</limits>-->
+                                <!--</rule>-->
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
