--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,5 @@ jobs:
 
       - run: wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r .assets[0].browser_download_url)
 
-      - run: java -jar ~/codacy-coverage-reporter-assembly-latest.jar -t ${CODACY_PROJECT_TOKEN} -l Java -r
-      target/site/jacoco/jacoco.xml
+      - run: java -jar ~/codacy-coverage-reporter-assembly-latest.jar -t ${CODACY_PROJECT_TOKEN} -l Java -r target/site/jacoco/jacoco.xml
 
